// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with an element children 1`] = `
<styled.span>
  <Toolbar.Item
    className=""
    icon=""
    inGroup={false}
    inactive={false}
    key=".0"
    loading={false}
    shape="round"
    size="md"
    type="button"
  >
    <div />
  </Toolbar.Item>
</styled.span>
`;

exports[`When using snapshots Should render with the inactive prop 1`] = `
<styled.span>
  <Toolbar.Item
    className=""
    icon=""
    inGroup={false}
    inactive={true}
    key=".0"
    loading={false}
    shape="round"
    size="md"
    type="button"
  >
    <div />
  </Toolbar.Item>
</styled.span>
`;

exports[`When using snapshots Should render with the loading prop 1`] = `
<styled.span>
  <Toolbar.Item
    className=""
    icon=""
    inGroup={false}
    inactive={false}
    key=".0"
    loading={true}
    shape="round"
    size="md"
    type="button"
  >
    <div />
  </Toolbar.Item>
</styled.span>
`;

exports[`When using snapshots Should render with the shape prop 1`] = `
<styled.span>
  <Toolbar.Item
    className=""
    icon=""
    inGroup={false}
    inactive={false}
    key=".0"
    loading={false}
    shape="square"
    size="md"
    type="button"
  >
    <div />
  </Toolbar.Item>
</styled.span>
`;

exports[`When using snapshots Should render with the size prop 1`] = `
<styled.span>
  <Toolbar.Item
    className=""
    icon=""
    inGroup={false}
    inactive={false}
    key=".0"
    loading={false}
    shape="round"
    size="xs"
    type="button"
  >
    <div />
  </Toolbar.Item>
</styled.span>
`;

exports[`When using snapshots Should render with the type prop 1`] = `
<styled.span>
  <Toolbar.Item
    className=""
    icon=""
    inGroup={false}
    inactive={false}
    key=".0"
    loading={false}
    shape="round"
    size="md"
    type="anchor"
  >
    <div />
  </Toolbar.Item>
</styled.span>
`;
